<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KitharaM</string>
    <string name="kithara">Kithara</string>
    <string name="dhach">Don\'t have Account?</string>
    <string name="welcome">Welcome</string>
    <string name="forgot_password">Forgot password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">Sign-up</string>
    <string name="log_instudent">As Student</string>
    <string name="log_intutor">As Tutor</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="re_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="psastiris">*******</string>
    <string name="login">Login</string>
    <string name="Conpass">Confirm password</string>
    <string name="email_address">Email Address</string>
    <string name="yrinfos">Please login with your account as Student</string>
    <string name="yrinfot">Please login with your account as tutor</string>
    <string name="title_activity_navi">navi</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="fpwrd">Forgot Password</string>
    <string name="getmail">Enter you email</string>
    <string name="advance">
Advanced guitarists learn transformative approaches that combine technical prowess with creativity.
        They defy conventions by utilizing rich harmonies and virtuoso performances. Their masterful
        chord voicings and sophisticated fingerstyle compositions push the boundaries of their trade.

CAGED is a technique that helps guitarists unlock the
        full potential of the fretboard by associating five major chord shapes (C, A G, E, and D) with
        their corresponding scale patterns, enabling smooth interconnection and repeatable major scale sequences.
    </string>
    <string name="advance1" tools:ignore="StringEscaping">

This allows for effortless navigation between various scale positions, enabling the creation of smooth melodies and solos. CAGED is a transformative tool for guitarists, allowing them to use the entire fretboard for creative improvisation. It offers flexibility, allowing seamless transition between chord voicings and scale positions, enabling creative possibilities for composition, improvisation, and playing in various musical contexts.

         </string>
    <string name="advance1a" tools:ignore="StringEscaping">
The <b>major scale</b> is a crucial guitar technique for mastering chords, creating melodies, and delivering expressive solos. Its structure, consisting of seven notes, produces a "happy" or "bright" sound, as seen in tunes like "Twinkle, Twinkle Little Star."

The formula, consisting of whole and half steps, is the foundation for creating major scales on the guitar. Memorizing this formula helps guitarists navigate the fretboard confidently. Learning various scale shapes, covering different parts of the neck, offers diverse phrasing possibilities.
         </string>
    <string name="advance1b" tools:ignore="StringEscaping">
Music sheets and tabs are essential tools for musicians to translate
        written symbols into musical expression. They convey melody, rhythm, and harmony through notations,
        while tabs simplify the process with numbers and strings, particularly for guitarists. Mastering
        these guides allows musicians to breathe life into compositions, bridging the gap between notation and
        emotive performance. To effectively utilize this resource, practice with the C major scale at a slow pace,
        gradually increasing tempo as proficiency is achieved. Emphasize accurate finger placement,
        align with designated numbers, and strive for a clean tone. Mastery of the C major scale enhances technical proficiency and equips musicians to tackle other major scales.
    </string>
    <string name="advance2" tools:ignore="StringEscaping">

        The <b>natural minor scale</b>, also known as the Aeolian mode, stands as a hidden gem in the arsenal of guitarists, casting a spell with its seven notes that conjure a dark and dreamy sonic landscape—an ideal addition to infuse a distinctive essence into your playing.
    </string>
    <string name="advance3" tools:ignore="StringEscaping">
How to Acquire the Natural Minor Scale?
 </string>
    <string name="advance3a" tools:ignore="StringEscaping">
"Start with a Major Scale: Begin with a major scale; for instance, let's take C major (C D E F G A B C).
Adjust Some Notes: Lower the 3rd, 6th, and 7th notes. In the case of C major, E becomes Eb, G transforms into Ab,
        and B changes to Bb.
Voila! You've crafted the C natural minor scale (C D Eb F G Ab Bb)."
 </string>
    <string name="advance3b" tools:ignore="StringEscaping">
Why is it exceptional? The natural minor scale has a unique sound due to its arrangement of whole and half steps. It allows for versatile finger positions and can be used to construct minor, minor seventh, and dominant seventh chords. The minor scale can be used to create enchanting riffs, solos, and chord progressions, making it a versatile tool for various musical styles.
 </string>
    <string name="advance3c" tools:ignore="StringEscaping">
"The natural minor scale is an artistic journey that offers a vast range of emotions and
        expressions, including haunting melodies, captivating chord progressions, and improvisation.
        It's a key to a rich and diverse musical landscape, so pick up your guitar and let your creativity flow.

Delving into the realm of the A natural minor scale, our first line takes you on a journey
        across the strings, starting at the 5th fret of the A string and ascending to the
        12th fret on the G string. Line two introduces arpeggios, a methodical approach to
        conquering the scale note by note, up and down the strings. Follow the designated picking
        pattern above each note - down, down, up, up, down, down, up. Master this, and you'll be
        arpeggio-ing like a seasoned pro!"
    </string>
    <string name="advance4" tools:ignore="StringEscaping">

"Line three kicks it up a notch with triplets, where you'll play three notes per beat, maintaining the same picking pattern. If you're craving a speed challenge, line four is your sixteenth-note showdown, pushing your accuracy and speed to the limit. Remember, start at a slower pace, ensuring clean notes and a steady rhythm before cranking up the tempo.

Mastering the A natural minor scale on your guitar can be achieved by exploring it in
        various positions, experimenting with alternative picking patterns, and introducing a
        metronome for timing precision. This exercise unlocks a world of melodic possibilities."
  </string>
    <string name="advance4a" tools:ignore="StringEscaping">
        The <b>pentatonic scale</b>, a musical ladder with five distinct notes within an octave, is a simple, catchy, and omnipresent scale found in rock, blues, and folk music.
  </string>
    <string name="advance4b" tools:ignore="StringEscaping">
"The pentatonic scale, with its five notes, is easy to learn and universally pleasing, making it ideal for beginners or those looking to navigate the musical landscape without getting lost in a maze of notes. It allows for versatile jamming, improvising, and constructing captivating melodies, making it a musical Swiss Army Knife.

Explore the pentatonic scale's simplicity and versatility, suitable for beginners
        and experienced players, allowing the fretboard to serve as a gateway to musical exploration."
</string>
    <string name="advance5" tools:ignore="StringEscaping">

"Let's Break it Down: There are two main types of pentatonic scales:"
</string>
    <string name="advance5a" tools:ignore="StringEscaping">
"Choose a Starting Note: Begin by selecting any note that resonates with you. For our example, let's start with C."
</string>
    <string name="advance5b" tools:ignore="StringEscaping">
Skip Up Three Notes: Progress to E, then skip over F and head to G.
</string>
    <string name="advance5c" tools:ignore="StringEscaping">
Skip Another Two Notes: Bypass A and B, and land on D.
</string>
    <string name="advance5d" tools:ignore="StringEscaping">
"Go Down One Note: Return to C, completing the sequence. Congratulations! You've just built a C major pentatonic scale: C, D, E, G, C.
Explore the pentatonic scale on guitar or other instruments, embracing mistakes and creativity. Use the scale as a
        musical playground and enjoy exploring and experimenting."
</string>
    <string name="advance5e" tools:ignore="StringEscaping">
        Pentatonic Scale Exercise Sample
    </string>
    <string name="advance5f" tools:ignore="StringEscaping">
"Get ready to delve into the simplicity and versatility of the pentatonic scale. Whether you're a beginner seeking an easy entry into music or an experienced player looking to expand your sonic toolkit, the Pentatonic Playground is your gateway to musical exploration. So, dive in, let the fretboard be your playground, and enjoy the musical journey!

These five positions, showcased in the tablature, can be shifted up or down the neck to
        play the scale in different keys."
    </string>
    <string name="advance6" tools:ignore="StringEscaping">

Practice Exercise

        </string>
    <string name="advance6a" tools:ignore="StringEscaping">
Slow Scale Playthrough: Begin by playing the pentatonic scale slowly in each of the five positions. Focus on precise fingering, ensuring clean notes.
</string>
    <string name="advance6b" tools:ignore="StringEscaping">
Varied Order Play: Experiment with different scale positions, either ascending from the bottom to the top or descending from the top to the bottom, once comfortable with each.
</string>
    <string name="advance6c" tools:ignore="StringEscaping">
Rhythmic Variations: Introduce rhythmic diversity by playing the scale in different rhythms, such as eighth notes, triplets, or sixteenth notes.
        </string>
    <string name="advance6d" tools:ignore="StringEscaping">

        Tips for Effective Practice:
The metronome is a crucial tool for improvement in the technique of playing the scale, as it helps maintain a steady tempo and enhances timing. Regular practice sessions and self-analysis can help identify areas for improvement, ensuring a smoother performance.
</string>
    <string name="advance6e" tools:ignore="StringEscaping">
Remember, The pentatonic scale is a crucial element in improvisation,
        and consistent practice can enhance the skills required for solos.
</string>
    <string name="advance7" tools:ignore="StringEscaping">
The blues scale is a unique musical scale used in blues music that
        incorporates the "blue note" into a regular minor or major pentatonic scale,
        producing a distinctly bluesy sound.

While there are various blues scale variations. two of the mose prevalent are:
        </string>
    <string name="advance7a" tools:ignore="StringEscaping">
The <b>minor blues scale</b>, a key element in blues music, features a flattened fifth, r
        esulting in a melancholic and expressive sound
        </string>
    <string name="advance7b" tools:ignore="StringEscaping">

        The <b>major blues scale</b> adds a flattened third to the major pentatonic scale, imparting a more
        upbeat and playful vibe often found in blues, rock, and country genres.
</string>
    <string name="advance7c" tools:ignore="StringEscaping">
Blues scales are utilized in soloing, improvisation, and melodies to provide a bluesy character and increase expressiveness through subtle bends in the "blue notes."
    </string>
</resources>